# fast-api-curso-dunossauro

./: .dockerignore  Dockerfile  comandos.md  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_api_0/: app.py  database.py  schemas.py  security.py  settings.py
fast_api_0/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 7ab6f811f458_create_todos_table.py  824c0035c68c_create_users_table.py  8dcb22ded05a_exercicio_02_aula_04.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_todos.py  test_users.py  teste_security.py
